crates/keron-lang/tests/corpus/errors/check/and_non_boolean.keron
val x: Boolean = 1 && true
